correct base template, center aligned items, placeholder color

--- a/src/assets/stylesheets/pages/_home.scss
+++ b/src/assets/stylesheets/pages/_home.scss
@@ -88,6 +88,22 @@
         padding-top: 0.75rem;
         padding-bottom: 0.75rem;
       }
+
+      ::placeholder {
+        /* Chrome, Firefox, Opera, Safari 10.1+ */
+        color: #afafaf;
+        opacity: 1; /* Firefox */
+      }
+
+      :-ms-input-placeholder {
+        /* Internet Explorer 10-11 */
+        color: #afafaf;
+      }
+
+      ::-ms-input-placeholder {
+        /* Microsoft Edge */
+        color: #afafaf;
+      }
     }
   }
 }
